<resources>
    <string name="app_name">PYPlayer</string>
    <string name="transition_mini_player">mini_player_transition</string>
    <string name="transition_fab">fab_transition</string>
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_seconds">秒</string>
    <string name="grid_size_1">1</string>
    <string name="grid_size_2">2</string>
    <string name="grid_size_3">3</string>
    <string name="grid_size_4">4</string>
    <string name="what_do_you_want_to_share">您想分享哪些内容？</string>
    <string name="currently_listening_to_x_by_x">当前正在播放 %2$s 的 %1$s 。</string>
    <string name="the_audio_file">音频文件</string>
    <string name="do_you_want_to_set_x_as_ringtone">您要将 %1$s 设为铃声吗？</string>
    <string name="x_has_been_set_as_ringtone">%1$s 已设为您的铃声。</string>
    <string name="action_set_as_ringtone">设为铃声</string>
    <string name="action_share">分享</string>
    <string name="action_settings">"设置"</string>
    <string name="action_grant">授予</string>
    <string name="action_done">完成</string>
    <string name="action_skip">跳过</string>
    <string name="action_about">关于</string>
    <string name="action_show_intro">观看介绍页</string>
    <string name="action_clear_playlist">清空播放列表</string>
    <string name="action_playing_queue">播放队列</string>
    <string name="action_add_to_favorites">添加到收藏</string>
    <string name="action_remove_from_favorites">从收藏中移除</string>
    <string name="action_search">搜索</string>
    <string name="action_play_next">作为下一首播放</string>
    <string name="action_play">播放</string>
    <string name="action_play_pause">播放/暂停</string>
    <string name="action_previous">上一首</string>
    <string name="action_next">下一首</string>
    <string name="action_add_to_playing_queue">加入播放队列</string>
    <string name="action_remove_from_playing_queue">从播放队列中移除</string>
    <string name="action_add_to_playlist">加入播放列表...</string>
    <string name="action_tag_editor">音乐标签编辑器</string>
    <string name="action_delete_from_device">从设备中删除</string>
    <string name="action_details">详情</string>
    <string name="action_rename">重命名</string>
    <string name="action_delete">删除</string>
    <string name="action_scan">扫描</string>
    <string name="action_set_as_start_directory">设为起始目录</string>
    <string name="albums">专辑</string>
    <string name="artists">艺术家</string>
    <string name="songs">歌曲</string>
    <string name="unplayable_file">\u65e0\u6cd5\u64ad\u653e\u8be5\u6b4c\u66f2\u3002</string>
    <string name="biography_unavailable">\u627e\u4e0d\u5230\u8be5\u827a\u672f\u5bb6\u7684\u4e2a\u4eba\u4fe1\u606f\u3002</string>
    <string name="biography">歌手简介</string>
    <string name="audio_focus_denied">无法获取音频焦点。</string>
    <string name="album">专辑</string>
    <string name="artist">艺术家</string>
    <string name="genre">流派</string>
    <string name="album_artist">专辑艺术家</string>
    <string name="year">年份</string>
    <string name="track">音轨</string>
    <string name="track_hint">"音轨（如用 2 表示第 2 首歌或用 3004 表示 CD3 里的第 4 首歌）"</string>
    <string name="lyrics">歌词</string>
    <string name="album_or_artist_empty">标题或艺术家名称为空。</string>
    <string name="saving_changes">正在保存更改</string>
    <string name="saving_to_file">保存至文件...</string>
    <string name="label_details">详情</string>
    <string name="label_file_name">文件名</string>
    <string name="label_file_path">文件路径</string>
    <string name="label_file_size">文件大小</string>
    <string name="label_file_format">格式</string>
    <string name="label_track_length">长度</string>
    <string name="label_bit_rate">比特率</string>
    <string name="label_sampling_rate">采样率</string>
    <string name="action_go_to_artist">查看艺术家</string>
    <string name="action_go_to_album">查看专辑</string>
    <string name="label_playing_queue">播放队列</string>
    <string name="save_as_playlist">保存为播放列表</string>
    <string name="no_results">没有找到结果</string>
    <string name="action_re_download_artist_image">更新艺术家图片</string>
    <string name="updated_artist_image">艺术家图片已更新。</string>
    <string name="could_not_update_artist_image">\u65e0\u6cd5\u66f4\u65b0\u827a\u672f\u5bb6\u56fe\u7247\u3002</string>
    <string name="updating">正在更新…</string>
    <string name="added_title_to_playing_queue">"此歌曲已加入播放队列。"</string>
    <string name="added_x_titles_to_playing_queue">%1$d 首歌曲已加入播放队列。</string>
    <string name="action_remove_from_playlist">从播放列表中移除</string>
    <string name="action_grid_size">网格尺寸</string>
    <string name="action_grid_size_land">网格尺寸（横屏）</string>
    <string name="inserted_x_songs_into_playlist_x">%1$d 首歌曲已加入到播放列表 %2$s。</string>
    <string name="created_playlist_x">播放列表 %1$s 已创建。</string>
    <string name="deleted_playlist_x">播放列表 %1$s 已删除。</string>
    <string name="deleted_x_songs">%1$d 首歌曲已删除。</string>
    <string name="could_not_create_playlist">\u65e0\u6cd5\u521b\u5efa\u64ad\u653e\u5217\u8868\u3002</string>
    <string name="delete_playlist_x"><![CDATA[是否删除播放列表 <b>%1$s</b>？]]></string>
    <string name="clear_playlist_x"><![CDATA[\u662f\u5426\u6e05\u7a7a\u64ad\u653e\u5217\u8868 <b>%1$s</b>\uff1f\u6b64\u64cd\u4f5c\u65e0\u6cd5\u64a4\u9500\uff01]]></string>
    <string name="delete_x_playlists"><![CDATA[是否删除 <b>%1$d</b> 个播放列表？]]></string>
    <string name="delete_song_x"><![CDATA[是否删除歌曲 <b>%1$s</b>？]]></string>
    <string name="delete_x_songs"><![CDATA[是否删除 <b>%1$d</b> 首歌曲？]]></string>
    <string name="remove_song_x_from_playlist"><![CDATA[是否从播放列表中移除 <b>%1$s</b>？]]></string>
    <string name="remove_x_songs_from_playlist"><![CDATA[是否从播放列表中移除 <b>%1$d</b> 首歌曲？]]></string>
    <string name="delete_song_title">删除歌曲</string>
    <string name="delete_songs_title">删除多首歌曲</string>
    <string name="remove_song_from_playlist_title">从播放列表中移除歌曲</string>
    <string name="remove_songs_from_playlist_title">从播放列表中移除多首歌曲</string>
    <string name="rename_playlist_title">重命名播放列表</string>
    <string name="delete_playlist_title">删除播放列表</string>
    <string name="delete_playlists_title">删除多个播放列表</string>
    <string name="clear_playlist_title">清空播放列表</string>
    <string name="save_playlist_title">另存为</string>
    <string name="add_playlist_title">"添加到播放列表"</string>
    <string name="action_shuffle_all">随机播放所有歌曲</string>
    <string name="action_shuffle_album">随机播放此专辑</string>
    <string name="action_shuffle_artist">随机播放此艺术家</string>
    <string name="action_shuffle_playlist">随机播放此播放列表</string>
    <string name="action_clear_playing_queue">清空播放队列</string>
    <string name="action_go_to_start_directory">跳转至起始目录</string>
    <string name="action_show_lyrics">显示歌词</string>
    <string name="last_opened">最后打开时的页面</string>
    <string name="light_theme_name">浅色</string>
    <string name="dark_theme_name">暗色</string>
    <string name="black_theme_name">黑色（AMOLED）</string>
    <string name="always">总是</string>
    <string name="only_on_wifi">仅在 WiFi 下</string>
    <string name="never">从不</string>
    <string name="equalizer">均衡器</string>
    <string name="pref_header_colors">颜色</string>
    <string name="pref_header_now_playing_screen">正在播放界面</string>
    <string name="pref_title_general_theme">全局主题</string>
    <string name="pref_header_audio">声音</string>
    <string name="pref_header_general">常规</string>
    <string name="pref_header_images">图片</string>
    <string name="pref_header_lockscreen">锁屏</string>
    <string name="pref_title_navigation_bar">着色导航栏</string>
    <string name="pref_title_app_shortcuts">着色应用快捷方式</string>
    <string name="pref_title_set_default_start_page">起始页</string>
    <string name="pref_title_album_art_on_lockscreen">显示专辑封面</string>
    <string name="pref_title_auto_download_artist_images">自动下载艺术家图像</string>
    <string name="pref_title_blurred_album_art">专辑封面模糊化</string>
    <string name="pref_title_colored_notification">启用通知背景着色</string>
    <string name="pref_title_ignore_media_store_artwork">忽略媒体储存中的专辑封面</string>
    <string name="pref_title_gapless_playback">无缝播放</string>
    <string name="pref_title_force_square_album_art">方形专辑封面</string>
    <string name="pref_title_opaque_toolbar_now_playing">不透明工具栏</string>
    <string name="pref_title_opaque_statusbar_now_playing">不透明状态栏</string>
    <string name="pref_title_larger_title_box_now_playing">大号标题框</string>
    <string name="pref_title_alternative_progress_slider_now_playing">备选进度条样式</string>
    <string name="pref_title_playback_controller_card_now_playing">启用卡片式播放控制面板</string>
    <string name="pref_title_colored_playback_controls_now_playing">启用播放控制面板着色</string>
    <string name="pref_title_audio_ducking">音频焦点丢失时降低音量</string>
    <string name="no_equalizer">没有找到均衡器。</string>
    <string name="no_audio_ID">"请在播放歌曲后再次尝试此操作。"</string>
    <string name="delete_action">删除</string>
    <string name="clear_action">清空</string>
    <string name="remove_action">移除</string>
    <string name="rename_action">重命名</string>
    <string name="create_action">创建</string>
    <string name="x_selected">已选择 %1$d</string>
    <string name="select">选择</string>
    <string name="default_str">默认</string>
    <string name="primary_color">主色调</string>
    <string name="accent_color">强调色</string>
    <string name="primary_color_desc">主题主色调，默认为靛蓝色。</string>
    <string name="accent_color_desc">主题强调色，默认为粉色。</string>
    <string name="update_image">更新图片</string>
    <string name="playlist_empty_text">播放列表为空</string>
    <string name="no_playlists">没有播放列表</string>
    <string name="no_albums">没有专辑</string>
    <string name="no_songs">没有歌曲</string>
    <string name="no_artists">没有艺术家</string>
    <string name="empty">空</string>
    <string name="playlist_name_empty">播放列表名称</string>
    <string name="song">歌曲</string>
    <string name="pref_only_lollipop">"仅适用于 Lollipop。"</string>
    <string name="pref_only_nougat_mr1">"仅适用于 Nougat 7.1。"</string>
    <string name="pref_summary_album_art_on_lockscreen">使用当前播放曲目的专辑封面作为锁屏壁纸。</string>
    <string name="pref_summary_blurred_album_art">模糊化显示锁屏界面内的专辑封面。此功能或与第三方应用及桌面插件产生冲突。</string>
    <string name="pref_summary_colored_notification">"\u4f7f\u7528\u4e0e\u4e13\u8f91\u5c01\u9762\u76f8\u5339\u914d\u7684\u989c\u8272\u7740\u8272\u901a\u77e5\u80cc\u666f\u8272\u3002"</string>
    <string name="pref_summary_gapless_playback">"在某些设备上会造成播放问题。"</string>
    <string name="pref_summary_force_square_album_art">在正在播放界面中总是显示方形的专辑封面。</string>
    <string name="pref_summary_opaque_toolbar_now_playing">着色工具栏。</string>
    <string name="pref_summary_opaque_statusbar_now_playing">着色状态栏。</string>
    <string name="pref_summary_larger_title_box_now_playing">提高歌曲标题框高度。</string>
    <string name="pref_summary_alternative_progress_slider_now_playing">使用不会遮挡专辑封面的进度条来替换默认的进度条滑块。</string>
    <string name="pref_summary_playback_controller_card_now_playing">在播放/暂停、上一首/下一首、随机播放和循环按钮下方显示卡片式背景。</string>
    <string name="pref_summary_ignore_media_store_artwork">可以提高专辑封面图片的质量但加载时间也会更长。仅当遇到专辑封面像素过低时建议开启。</string>
    <string name="pref_summary_colored_playback_controls_now_playing">\u64ad\u653e/\u6682\u505c\u3001\u968f\u673a\u64ad\u653e\u3001\u5faa\u73af\u64ad\u653e\u6309\u952e\u4ee5\u53ca\u6b4c\u66f2\u8fdb\u5ea6\u6761\u7684\u989c\u8272\u90fd\u5c06\u6839\u636e\u4e13\u8f91\u5c01\u9762\u8272\u8fdb\u884c\u7740\u8272\u3002</string>
    <string name="pref_summary_colored_navigation_bar">用主色调着色导航栏。</string>
    <string name="pref_summary_colored_app_shortcuts">用主色调着色应用快捷方式。</string>
    <string name="pref_summary_audio_ducking">通知、导航等</string>
    <string name="could_not_download_album_cover">"\u65e0\u6cd5\u4e0b\u8f7d\u5230\u5339\u914d\u7684\u4e13\u8f91\u5c01\u9762\u3002"</string>
    <string name="search_hint">正在扫描</string>
    <string name="rescanning_media">正在重新扫描媒体储存…</string>
    <string name="support_development">支持开发者</string>
    <string name="lib_music">媒体库</string>
    <string name="lib_folder">文件夹</string>
</resources>